# MVS-DEV

./: .gitignore  README.md  pyproject.toml  ros2_hit_targets_online_bridge.py
configs/: README.md
examples/: fake_tennis_detections.json  quad_capture_demo.py
tests/: conftest.py  test_calibration_fuse_params_json.py  test_calibration_roi.py  test_calibration_yaml.py  test_capture_relayout.py  test_capture_run_analysis.py  test_capture_session.py  test_curve_stage_episode.py  test_curve_stage_episode_second_land.py  test_curve_stage_smoke.py  test_curve_v3_second_land_time.py  test_detector_pt.py  test_fiducial_pose_calib_io.py  test_fiducial_pose_pnp.py  test_localize_balls.py  test_mvs_configure_resolution.py  test_offline_pt_device_controls.py  test_offline_serials_filter.py  test_online_latest_only_source.py  test_online_output_controls.py  test_online_runtime_wiring_sensor_roi.py  test_online_terminal_output.py  test_pipeline_detector_crop.py  test_pipeline_detector_microbatch.py  test_pipeline_observability_metrics.py  test_pipeline_output_covariance.py  test_pipeline_runtime_aoi_clip_shape.py  test_repo_hygiene_public_api_boundary.py  test_repo_hygiene_public_api_imports.py  test_repo_hygiene_tools_boundary.py  test_repo_hygiene_tools_scripts.py  test_report_capture_timing.py  test_tennis_geometry.py  test_time_mapping.py  test_time_mapping_group_metrics.py  test_time_mapping_online.py  test_time_mapping_report.py  test_tools_script_naming.py  test_two_stage_roi_controller.py
tools/: README.md  debug_master_slave_timing.py  dump_mvs_group_images.py  generate_camera_extrinsics.py  generate_sample_sequence.py  image_time_sync.py  mvs_fit_time_mapping.py  mvs_probe_time_sync.py  mvs_relayout_by_camera.py  mvs_runtime_roi_probe.py  plot_curve_corridor_and_interception.py  plot_online_points_xyz.py  plot_online_positions_3d_trajectory.py  (+5 more)
(+23 files in other folders)
